--- a/id/belajar-bahasa-inggris-efektif.html
+++ b/id/belajar-bahasa-inggris-efektif.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "Cara Belajar Bahasa Inggris dengan Efektif: Perjalanan dan Saran Saya",
-        "description": "Temukan strategi terbukti untuk belajar bahasa Inggris dengan efektif melalui panduan komprehensif kami berdasarkan pengalaman dunia nyata.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/id/belajar-bahasa-inggris-efektif",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
-        },
-        "keywords": "belajar bahasa inggris dengan efektif, strategi belajar bahasa inggris, immersi bahasa inggris, sumber belajar bahasa inggris"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "Cara Belajar Bahasa Inggris Efektif: Perjalanan dan Saran Saya",
+  "description": "Panduan komprehensif untuk belajar bahasa Inggris secara efektif berdasarkan pengalaman nyata. Mencakup penetapan tujuan, keterlibatan aktif, perendaman bahasa, strategi pembelajaran personal, mendengarkan, berbicara, membaca, menulis, tata bahasa, membangun kosakata, alat teknologi termasuk asisten AI, dan pentingnya konsistensi.",
+  "keywords": [
+    "belajar bahasa inggris efektif",
+    "strategi belajar bahasa inggris",
+    "perendaman bahasa inggris",
+    "pembelajaran bahasa inggris personal",
+    "latihan mendengarkan bahasa inggris",
+    "kefasihan berbicara bahasa inggris",
+    "pemahaman membaca bahasa inggris",
+    "latihan menulis bahasa inggris",
+    "tips tata bahasa inggris",
+    "membangun kosakata bahasa inggris",
+    "teknologi pembelajaran bahasa",
+    "AI untuk pembelajaran bahasa",
+    "konsistensi belajar bahasa inggris"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+  },
+  "url": "https://englishtests.online/id/belajar-bahasa-inggris-efektif",
+  "inLanguage": "id",
+  "articleSection": "Pembelajaran Bahasa Inggris",
+  "articleBody": "Pelajari cara efektif belajar bahasa Inggris dengan saran praktis yang mencakup penetapan tujuan, keterlibatan aktif, perendaman bahasa, pembelajaran personal, mendengarkan, berbicara, membaca, menulis, tata bahasa, kosakata, alat teknologi, dan strategi konsistensi.",
+  "about": {
+    "@type": "Thing",
+    "name": "Pembelajaran Bahasa Inggris"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "Pendidikan",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "Komunikasi",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "Kecerdasan Buatan",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "Kecerdasan Buatan",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "12 Strategi Terbukti untuk Menguasai Bahasa Inggris",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "Pelajar Bahasa Inggris"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Menetapkan Tujuan yang Jelas",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Keterlibatan Aktif adalah Kunci",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Benamkan Diri Anda",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Pembelajaran Personal",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Latih Pendengaran Anda",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Beranilah Berbicara!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Membaca Secara Luas",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Latihan Menulis",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Tata Bahasa Penting",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Kosakata adalah Kekuatan",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Teknologi adalah Teman Anda",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/id/belajar-bahasa-inggris-efektif"
+      },
+      "name": "Konsistensi dan Ketekunan",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "Semua Tingkat",
+  "educationalUse": "Belajar Mandiri",
+  "interactivityType": "Ekspositif",
+  "learningResourceType": "Panduan",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
