--- a/de/englisch-effektiv-lernen.html
+++ b/de/englisch-effektiv-lernen.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "Wie man Englisch effektiv lernt: Meine Reise und Ratschläge",
-        "description": "Entdecken Sie bewährte Strategien, um Englisch effektiv zu lernen, mit unserem umfassenden Leitfaden, der auf Erfahrungen aus der Praxis basiert.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/de/englisch-effektiv-lernen",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
-        },
-        "keywords": "englisch effektiv lernen, englisch lernstrategien, englisch immersion, englisch lernressourcen"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "Englisch effektiv lernen: Meine Reise und Ratschläge",
+  "description": "Ein umfassender Leitfaden zum effektiven Englischlernen basierend auf echten Erfahrungen. Behandelt Zielsetzung, aktive Beteiligung, Immersion, personalisierte Lernstrategien, Hören, Sprechen, Lesen, Schreiben, Grammatik, Wortschatzaufbau, technologische Hilfsmittel einschließlich KI-Assistenten und die Bedeutung von Konsequenz.",
+  "keywords": [
+    "englisch effektiv lernen",
+    "englisch lernstrategien",
+    "englisch immersion",
+    "personalisiertes englischlernen",
+    "englisch hörverständnis übungen",
+    "englisch sprechfertigkeit",
+    "englisch leseverständnis",
+    "englisch schreibpraxis",
+    "englisch grammatik tipps",
+    "englisch wortschatzaufbau",
+    "sprachlern-technologie",
+    "KI für sprachenlernen",
+    "konsequenz beim englischlernen"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+  },
+  "url": "https://englishtests.online/de/englisch-effektiv-lernen",
+  "inLanguage": "de",
+  "articleSection": "Englisch Lernen",
+  "articleBody": "Lernen Sie, wie man effektiv Englisch lernt, mit praktischen Ratschlägen zu Zielsetzung, aktiver Beteiligung, Immersion, personalisiertem Lernen, Hören, Sprechen, Lesen, Schreiben, Grammatik, Wortschatz, technologischen Hilfsmitteln und Konsequenzstrategien.",
+  "about": {
+    "@type": "Thing",
+    "name": "Englisch Sprachenlernen"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "Bildung",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "Kommunikation",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "Künstliche Intelligenz",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "Künstliche Intelligenz",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "12 bewährte Strategien zur Beherrschung der englischen Sprache",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "Englischlernende"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/de/englisch-effektiv-lernen"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Klare Ziele setzen",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Aktive Beteiligung ist der Schlüssel",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Tauchen Sie ein",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Personalisiertes Lernen",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Trainieren Sie Ihr Gehör",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Sprechen Sie!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Breit gefächertes Lesen",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Schreibpraxis",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Grammatik ist wichtig",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Wortschatz ist Macht",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Technologie ist Ihr Freund",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/de/englisch-effektiv-lernen"
+      },
+      "name": "Konsequenz und Beharrlichkeit",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "Alle Niveaus",
+  "educationalUse": "Selbststudium",
+  "interactivityType": "Darstellend",
+  "learningResourceType": "Leitfaden",
+  "typicalAgeRange": "13+"
+}
+</script>
 </body>
 </html>
