--- a/ja/eigo-wo-kouka-teki-ni-manabu.html
+++ b/ja/eigo-wo-kouka-teki-ni-manabu.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "効果的に英語を学ぶ方法：私の体験とアドバイス",
-        "description": "実際の経験に基づいた包括的なガイドで、効果的に英語を学ぶための実証済みの戦略を発見しましょう。",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
-        },
-        "keywords": "効果的に英語を学ぶ, 英語学習戦略, 英語イマージョン, 英語学習リソース"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "英語を効果的に学ぶ方法：私の旅と助言",
+  "description": "実体験に基づいた英語を効果的に学ぶための包括的なガイド。目標設定、積極的な取り組み、英語環境への没入、個別学習戦略、リスニング、スピーキング、リーディング、ライティング、文法、語彙構築、AIアシスタントを含むテクノロジーツール、そして一貫性の重要性を取り上げています。",
+  "keywords": [
+    "英語を効果的に学ぶ",
+    "英語学習戦略",
+    "英語環境への没入",
+    "個別化された英語学習",
+    "英語リスニング練習",
+    "英語スピーキング流暢さ",
+    "英語読解力",
+    "英語ライティング練習",
+    "英語文法のコツ",
+    "英語語彙構築",
+    "言語学習テクノロジー",
+    "言語学習のためのAI",
+    "英語学習の一貫性"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+  },
+  "url": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu",
+  "inLanguage": "ja",
+  "articleSection": "英語学習",
+  "articleBody": "目標設定、積極的な取り組み、英語環境への没入、個別学習、リスニング、スピーキング、リーディング、ライティング、文法、語彙、テクノロジーツール、そして一貫性の戦略をカバーする実践的なアドバイスで効果的に英語を学ぶ方法を学びましょう。",
+  "about": {
+    "@type": "Thing",
+    "name": "英語学習"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "教育",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "コミュニケーション",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "人工知能",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "人工知能",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "英語をマスターするための12の実証済み戦略",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "英語学習者"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "明確な目標を設定する",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "積極的な取り組みが鍵",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "英語環境に自分を浸す",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "個別学習",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "耳を鍛える",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "積極的に話す！",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "幅広く読む",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "ライティング練習",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "文法は重要",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "語彙は力なり",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "テクノロジーはあなたの味方",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu"
+      },
+      "name": "一貫性と粘り強さ",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "すべてのレベル",
+  "educationalUse": "自己学習",
+  "interactivityType": "解説的",
+  "learningResourceType": "ガイド",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
