--- a/tr/ingilizce-etkili-ogrenme.html
+++ b/tr/ingilizce-etkili-ogrenme.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "İngilizceyi Etkili Öğrenme: Yolculuğum ve Tavsiyelerim",
-        "description": "Gerçek dünya deneyimine dayalı kapsamlı rehberimizle İngilizceyi etkili bir şekilde öğrenmek için kanıtlanmış stratejileri keşfedin.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/tr/ingilizce-etkili-ogrenme",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
-        },
-        "keywords": "ingilizceyi etkili öğrenme, ingilizce öğrenme stratejileri, ingilizce dil ortamı, ingilizce öğrenme kaynakları"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "İngilizce Etkili Öğrenme: Yolculuğum ve Tavsiyelerim",
+  "description": "Gerçek deneyime dayalı İngilizceyi etkili bir şekilde öğrenmek için kapsamlı bir rehber. Hedef belirleme, aktif katılım, dil ortamına dalma, kişiselleştirilmiş öğrenme stratejileri, dinleme, konuşma, okuma, yazma, dilbilgisi, kelime dağarcığı geliştirme, yapay zeka asistanları dahil teknoloji araçları ve tutarlılığın önemi konularını kapsar.",
+  "keywords": [
+    "ingilizce etkili öğrenme",
+    "ingilizce öğrenme stratejileri",
+    "ingilizce dil ortamına dalma",
+    "kişiselleştirilmiş ingilizce öğrenme",
+    "ingilizce dinleme pratiği",
+    "ingilizce konuşma akıcılığı",
+    "ingilizce okuma anlama",
+    "ingilizce yazma pratiği",
+    "ingilizce dilbilgisi ipuçları",
+    "ingilizce kelime dağarcığı geliştirme",
+    "dil öğrenme teknolojisi",
+    "dil öğrenme için yapay zeka",
+    "ingilizce öğrenmede tutarlılık"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+  },
+  "url": "https://englishtests.online/tr/ingilizce-etkili-ogrenme",
+  "inLanguage": "tr",
+  "articleSection": "İngilizce Öğrenme",
+  "articleBody": "Hedef belirleme, aktif katılım, dil ortamına dalma, kişiselleştirilmiş öğrenme, dinleme, konuşma, okuma, yazma, dilbilgisi, kelime dağarcığı, teknoloji araçları ve tutarlılık stratejilerini kapsayan pratik tavsiyelerle İngilizceyi etkili bir şekilde nasıl öğreneceğinizi öğrenin.",
+  "about": {
+    "@type": "Thing",
+    "name": "İngilizce Dil Öğrenimi"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "Eğitim",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "İletişim",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "Yapay Zeka",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "Yapay Zeka",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "İngilizce Dilini Ustalıkla Öğrenmek İçin 12 Kanıtlanmış Strateji",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "İngilizce Öğrenenler"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Net Hedefler Belirlemek",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Aktif Katılım Anahtar",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Kendinizi Dil Ortamına Daldırın",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Kişiselleştirilmiş Öğrenme",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Kulağınızı Eğitin",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Çekinmeden Konuşun!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Geniş Çapta Okuma",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Yazma Pratiği",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Dilbilgisi Önemlidir",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Kelime Dağarcığı Güçtür",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Teknoloji Dostunuzdur",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/tr/ingilizce-etkili-ogrenme"
+      },
+      "name": "Tutarlılık ve Kararlılık",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "Tüm Seviyeler",
+  "educationalUse": "Kendi Kendine Çalışma",
+  "interactivityType": "Açıklayıcı",
+  "learningResourceType": "Rehber",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
