--- a/vi/hoc-tieng-anh-hieu-qua.html
+++ b/vi/hoc-tieng-anh-hieu-qua.html
@@ -410,27 +410,226 @@
         </div>
     </footer>
     
-    <script type="application/ld+json">{
-    "@context": "https://schema.org",
-    "@type": "Article",
-    "headline": "Cách Học Tiếng Anh Hiệu Quả: Hành Trình và Lời Khuyên Của Tôi",
-    "description": "Khám phá các chiến lược đã được chứng minh để học tiếng Anh hiệu quả với hướng dẫn toàn diện của chúng tôi dựa trên kinh nghiệm thực tế.",
-    "author": {
-        "@type": "Organization",
-        "name": "englishtests.online"
-    },
-    "publisher": {
-        "@type": "Organization",
-        "name": "englishtests.online",
-        "url": "https://englishtests.online/"
-    },
-    "url": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua",
-    "mainEntityOfPage": {
-        "@type": "WebPage",
-        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
-    },
-    "keywords": "học tiếng anh hiệu quả, chiến lược học tiếng anh, ngâm mình trong tiếng anh, tài nguyên học tiếng anh"
+    <script type="application/ld+json">
+	{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "Học Tiếng Anh Hiệu Quả: Hành Trình và Lời Khuyên của Tôi",
+  "description": "Hướng dẫn toàn diện về cách học tiếng Anh hiệu quả dựa trên kinh nghiệm thực tế. Bao gồm việc đặt mục tiêu, tham gia tích cực, đắm mình trong ngôn ngữ, chiến lược học tập cá nhân hóa, nghe, nói, đọc, viết, ngữ pháp, xây dựng vốn từ vựng, công cụ công nghệ bao gồm trợ lý AI, và tầm quan trọng của sự kiên trì.",
+  "keywords": [
+    "học tiếng anh hiệu quả",
+    "chiến lược học tiếng anh",
+    "đắm mình trong tiếng anh",
+    "học tiếng anh cá nhân hóa",
+    "luyện nghe tiếng anh",
+    "nói tiếng anh trôi chảy",
+    "đọc hiểu tiếng anh",
+    "luyện viết tiếng anh",
+    "mẹo ngữ pháp tiếng anh",
+    "xây dựng từ vựng tiếng anh",
+    "công nghệ học ngôn ngữ",
+    "AI cho việc học ngôn ngữ",
+    "sự kiên trì trong học tiếng anh"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+  },
+  "url": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua",
+  "inLanguage": "vi",
+  "articleSection": "Học Tiếng Anh",
+  "articleBody": "Học cách học tiếng Anh hiệu quả với những lời khuyên thực tế bao gồm việc đặt mục tiêu, tham gia tích cực, đắm mình trong ngôn ngữ, học tập cá nhân hóa, nghe, nói, đọc, viết, ngữ pháp, từ vựng, công cụ công nghệ và chiến lược kiên trì.",
+  "about": {
+    "@type": "Thing",
+    "name": "Học Tiếng Anh"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "Giáo dục",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "Giao tiếp",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "Trí tuệ Nhân tạo",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "Trí tuệ Nhân tạo",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "12 Chiến Lược Đã Được Chứng Minh để Thành Thạo Tiếng Anh",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "Người Học Tiếng Anh"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Đặt Mục Tiêu Rõ Ràng",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Tham Gia Tích Cực là Chìa Khóa",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Đắm Mình trong Ngôn Ngữ",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Học Tập Cá Nhân Hóa",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Luyện Tai Nghe",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Hãy Mạnh Dạn Nói Lên!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Đọc Rộng Rãi",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Luyện Tập Viết",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Ngữ Pháp Quan Trọng",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Từ Vựng Chính Là Sức Mạnh",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Công Nghệ Là Bạn Đồng Hành",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+      },
+      "name": "Kiên Trì và Bền Bỉ",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "Tất Cả Các Cấp Độ",
+  "educationalUse": "Tự Học",
+  "interactivityType": "Thuyết Giảng",
+  "learningResourceType": "Hướng Dẫn",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
